--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/LanternTC.loader.js";
+      var loaderUrl = buildUrl + "/LanternTC_03.loader.js";
       var config = {
-        dataUrl: buildUrl + "/LanternTC.data",
-        frameworkUrl: buildUrl + "/LanternTC.framework.js",
-        codeUrl: buildUrl + "/LanternTC.wasm",
+        dataUrl: buildUrl + "/LanternTC_03.data",
+        frameworkUrl: buildUrl + "/LanternTC_03.framework.js",
+        codeUrl: buildUrl + "/LanternTC_03.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "anthsu",
         productName: "2021myWebGLAR",
