--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | 2021myWebGLAR</title>
+    <title>Unity WebGL Player | 勸素祈福天燈</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -22,19 +22,19 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">2021myWebGLAR</div>
+        <div id="unity-build-title">勸素祈福天燈</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/LanternTC_03.loader.js";
+      var loaderUrl = buildUrl + "/Lantern_04.loader.js";
       var config = {
-        dataUrl: buildUrl + "/LanternTC_03.data",
-        frameworkUrl: buildUrl + "/LanternTC_03.framework.js",
-        codeUrl: buildUrl + "/LanternTC_03.wasm",
+        dataUrl: buildUrl + "/Lantern_04.data",
+        frameworkUrl: buildUrl + "/Lantern_04.framework.js",
+        codeUrl: buildUrl + "/Lantern_04.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "anthsu",
-        productName: "2021myWebGLAR",
+        productName: "勸素祈福天燈",
         productVersion: "0.1",
       };
 
